--- a/html.html
+++ b/html.html
@@ -9,7 +9,7 @@
          <li> Vagrant </li>
          <li> Docker </li>
          <li> Ansible </li>
-         <li> Integración continue </li>
+         <li> Integración continuas </li>
      </ul>
 </body>
 </html>
